--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="contact.html" target="_self"> 🎨 Painting </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="enroll.html" target="_self"> ☎️ Vintage </a>
+                        <a class="nav-link" href="enroll.html" target="_self"> ☎️ Contact us </a>
                     </li>
                 </ul>
 
